--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -14,10 +14,10 @@
           <h3>Welcom to the Friend Finder!</h3>
           <p>Take our survey to see who your ideal best friend is!</p>
           <hr>
-          <a href="/survey"><button class="btn btn-primary btn-lg"><span class="fa fa-eye"></span> View Tables</button></a>
+          <a href="/survey"><button class="btn btn-primary btn-lg"><span class="fa fa-eye"></span> Take Our Survey</button></a>
         
         </div>
-        <a href="/api/frieds">Friend API Link |</a>                
+        <a href="/api/frieds">Friend API Link</a>                
 </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
