--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -11,13 +11,13 @@
     <div class="container">
         <div class="jumbotron text-center">
                 <h1 style="font-size: 60px"><span class="fas fa-fire-alt">Friend Finder</span></h1>
-          <h3>Welcom to the Friend Finder!</h3>
+          <h3>Welcome to the Friend Finder!</h3>
           <p>Take our survey to see who your ideal best friend is!</p>
           <hr>
-          <a href="/survey"><button class="btn btn-primary btn-lg"><span class="fa fa-eye"></span> Take Our Survey</button></a>
+          <a href="./survey.html"><button class="btn btn-primary btn-lg"><span class="fa fa-eye"></span> Click For Survey</button></a>
         
         </div>
-        <a href="/api/frieds">Friend API Link</a>                
+        <a href="/api/friends">Friend API Link</a>                
 </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
